force-app/main/default/objects/Social_Post_Transfer_log__c/Social_Post_Transfer_log__c.object-meta.xml
<CustomObject>
    <description>Logging for transfer post</description>
    <label>Social Post Transfer log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Social Post Transfer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Post Transfer logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>