force-app/main/default/objects/Social_Post_Transfer_log__c/fields/Social_Post_Transfer_ID__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_Transfer_ID__c</fullName>
    <displayFormat>SP-{0000}</displayFormat>
    <label>Social Post Transfer ID</label>
    <type>AutoNumber</type>
</CustomField>