force-app/main/default/objects/Social_Post_Transfer_log__c/fields/Transfer_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer Datetime</label>
    <type>DateTime</type>
</CustomField>