force-app/main/default/objects/Social_Post_Transfer_log__c/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transfer To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>